<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never">


                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_margin="9dp"
                            android:adjustViewBounds="true"
                            android:padding="3dp"
                            android:scaleType="centerInside"

                            android:src="@drawable/ic_user"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/profileName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text=""
                            app:layout_constraintEnd_toEndOf="@+id/imageView"
                            app:layout_constraintStart_toStartOf="@+id/imageView"
                            app:layout_constraintTop_toBottomOf="@+id/imageView" />

                        <Button
                            android:id="@+id/btnCustomerService"
                            style="@style/greenButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/customerService"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <View
                            android:id="@+id/view1"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="40dp"
                            android:background="@android:color/darker_gray"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/profileName"
                            tools:ignore="MissingConstraints" />

                        <Button
                            android:id="@+id/btnEditProfile"
                            style="@style/profileButton"

                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                            android:selectAllOnFocus="true"
                            android:text="@string/edit_profile"
                            app:layout_constraintEnd_toEndOf="parent"

                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/view1" />

                        <View
                            android:id="@+id/view2"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@android:color/darker_gray"
                            app:layout_constraintEnd_toEndOf="@id/btnEditProfile"
                            app:layout_constraintEnd_toStartOf="@id/btnEditProfile"
                            app:layout_constraintStart_toStartOf="@+id/btnEditProfile"
                            app:layout_constraintTop_toBottomOf="@+id/btnEditProfile"
                            tools:ignore="MissingConstraints" />

                        <Button
                            android:id="@+id/btnRedeemHis"
                            style="@style/profileButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                            android:text="@string/redeem_his"


                            app:layout_constraintEnd_toEndOf="@+id/view2"
                            app:layout_constraintStart_toStartOf="@+id/view2"
                            app:layout_constraintTop_toBottomOf="@+id/view2" />

                        <View
                            android:id="@+id/view3"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@android:color/darker_gray"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/btnRedeemHis"
                            app:layout_constraintTop_toBottomOf="@+id/btnRedeemHis"
                            tools:ignore="MissingConstraints" />

                        <Button
                            android:id="@+id/btnThrowRecord"
                            style="@style/profileButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"

                            android:text="@string/throw_record"
                            app:layout_constraintEnd_toEndOf="@+id/btnRedeemHis"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="@+id/btnRedeemHis"
                            app:layout_constraintTop_toBottomOf="@+id/view3" />

                        <View
                            android:id="@+id/view4"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@android:color/darker_gray"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/btnThrowRecord"
                            app:layout_constraintTop_toBottomOf="@+id/btnThrowRecord"
                            tools:ignore="MissingConstraints" />

                        <Button
                            android:id="@+id/btnAboutUs"
                            style="@style/profileButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"

                            android:text="@string/about_us"
                            app:layout_constraintEnd_toEndOf="@+id/btnThrowRecord"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="@+id/btnThrowRecord"
                            app:layout_constraintTop_toBottomOf="@+id/view4" />

                        <View
                            android:id="@+id/view5"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@android:color/darker_gray"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/btnAboutUs"
                            app:layout_constraintTop_toBottomOf="@+id/btnAboutUs"
                            tools:ignore="MissingConstraints" />

                        <Button
                            android:id="@+id/btnLogout"
                            style="@style/profileButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"

                            android:text="@string/logOut"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/view5"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="@+id/view5"
                            app:layout_constraintTop_toBottomOf="@+id/view5" />

                </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

</layout>